add auth middleware and users/me
