# docs/swagger.json
@@ -49,7 +49,7 @@
                 }
             }
         },
-        "/users/": {
+        "/users": {
             "get": {
                 "description": "List user",
                 "consumes": [
@@ -107,6 +107,34 @@
                         }
                     }
                 ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/users.User"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/me": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Authenticated endpoint",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Authenticated endpoint",
                 "responses": {
                     "200": {
                         "description": "OK",
