# users/controller.go
@@ -26,7 +26,7 @@ type UserPage struct {
 //	@Produce	json
 //	@Param		data	body		UserRegisterData	true	"User Register Data"
 //	@Success	200		{object}	User
-//	@Router		/users/ [post]
+//	@Router		/users [post]
 func (ctrl *Controller) Signup(c *gin.Context) {
 	var userData UserRegisterData
 
@@ -124,7 +124,7 @@ func (ctrl *Controller) Retrieve(c *gin.Context) {
 //	@Param			offset	query		int	false	"Offset"
 //	@Param			limit	query		int	false	"Limit"
 //	@Success		200		{object}	UserPage
-//	@Router			/users/ [get]
+//	@Router			/users [get]
 func (ctrl *Controller) List(c *gin.Context) {
 	db := db.GetDB()
 	offsetStr := c.DefaultQuery("offset", "0")
@@ -175,4 +175,19 @@ func (ctrl *Controller) List(c *gin.Context) {
 	}
 
 	c.JSON(200, UserPage{Total: total, Data: result})
+}
+
+// Authenticated endpoint godoc
+//
+//	@Summary		Authenticated endpoint
+//	@Description	Authenticated endpoint
+//	@Tags			users
+//	@Accept			json
+//	@Produce		json
+//	@Security		Bearer
+//	@Success		200 {object}	User
+//	@Router			/users/me [get]
+func (ctrl *Controller) RetrieveMe(c *gin.Context) {
+	user := c.MustGet("user").(*User)
+	c.JSON(http.StatusOK, user)
 }
